# linux-interprocess

./: Cargo.toml  README.md
src/: interprocess_mutex.rs  lib.rs
